# arduino-dsmr

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  library.properties
examples/minimal_parse/: minimal_parse.ino
examples/parse/: parse.ino
examples/parse_to_json/: parse_to_json.ino
examples/read/: read.ino
specs/Belgium Fluvius extention specification/: e-MUCS_H_Ed_1_3.docx  voorbeelden.txt
src/: dsmr.h  dsmr2.h
src/dsmr/: crc16.h  fields.cpp  fields.h  parser.h  reader.h  util.h
src/dsmr2/: fields2.cpp  fields2.h  parser2.h  reader2.h
test/: parser_test.cpp  precompiled_header.h
